{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 43,
  "lineage": "5f7f5c1b-79bf-1ea7-2a06-184b74a8a5fd",
  "resources": [
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "each": "map",
      "provider": "provider.google-beta",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-central1/instanceGroups/ml-bk-ml-mig-bkt-s-lb-group2-mig",
                "max_utilization": 0.8
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-east1/instanceGroups/ml-bk-ml-mig-bkt-s-lb-group3-mig",
                "max_utilization": 0.8
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-west1/instanceGroups/ml-bk-ml-mig-bkt-s-lb-group1-mig",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-08T01:28:48.330-08:00",
            "enable_cdn": false,
            "fingerprint": "cNAuI6qMH8A=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/healthChecks/ml-bk-ml-mig-bkt-s-lb-hc-default"
            ],
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "ml-bk-ml-mig-bkt-s-lb-backend-default",
            "port_name": "http",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl"
          ]
        },
        {
          "index_key": "mig1",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-west1/instanceGroups/ml-bk-ml-mig-bkt-s-lb-group1-mig",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-08T01:28:48.326-08:00",
            "enable_cdn": false,
            "fingerprint": "QPbvOpKbGFo=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/healthChecks/ml-bk-ml-mig-bkt-s-lb-hc-mig1"
            ],
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig1",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "ml-bk-ml-mig-bkt-s-lb-backend-mig1",
            "port_name": "http",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig1",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl"
          ]
        },
        {
          "index_key": "mig2",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-central1/instanceGroups/ml-bk-ml-mig-bkt-s-lb-group2-mig",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-08T01:28:48.294-08:00",
            "enable_cdn": false,
            "fingerprint": "RA6FhvzCy80=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/healthChecks/ml-bk-ml-mig-bkt-s-lb-hc-mig2"
            ],
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig2",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "ml-bk-ml-mig-bkt-s-lb-backend-mig2",
            "port_name": "http",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig2",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl"
          ]
        },
        {
          "index_key": "mig3",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-east1/instanceGroups/ml-bk-ml-mig-bkt-s-lb-group3-mig",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-02-08T01:28:48.138-08:00",
            "enable_cdn": false,
            "fingerprint": "CrHzpq1MtXg=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/healthChecks/ml-bk-ml-mig-bkt-s-lb-hc-mig3"
            ],
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig3",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "ml-bk-ml-mig-bkt-s-lb-backend-mig3",
            "port_name": "http",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig3",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-02-08T01:28:35.041-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/firewalls/ml-bk-ml-mig-bkt-s-lb-hc-0",
            "log_config": [],
            "name": "ml-bk-ml-mig-bkt-s-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "priority": 1000,
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/firewalls/ml-bk-ml-mig-bkt-s-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ml-bk-ml-mig-bkt-s-lb-group1",
              "ml-bk-ml-mig-bkt-s-lb-group2",
              "ml-bk-ml-mig-bkt-s-lb-group3",
              "ml-bk-ml-mig-bkt-s-lb-gw-group1",
              "ml-bk-ml-mig-bkt-s-lb-gw-group2",
              "ml-bk-ml-mig-bkt-s-lb-gw-group3"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_router.group3",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.120.84.39",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-02-08T01:27:20.775-08:00",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/addresses/ml-bk-ml-mig-bkt-s-lb-address",
            "name": "ml-bk-ml-mig-bkt-s-lb-address",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/addresses/ml-bk-ml-mig-bkt-s-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/forwardingRules/ml-bk-ml-mig-bkt-s-lb",
            "ip_address": "34.120.84.39",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ml-bk-ml-mig-bkt-s-lb",
            "port_range": "80-80",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/forwardingRules/ml-bk-ml-mig-bkt-s-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/targetHttpProxies/ml-bk-ml-mig-bkt-s-lb-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.assets",
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "google_compute_url_map.ml-bkd-ml-mig-bckt-s-lb",
            "google_storage_bucket.assets",
            "module.gce-lb-https.google_compute_backend_service.default",
            "module.gce-lb-https.google_compute_global_address.default",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.gce-lb-https.google_compute_target_http_proxy.default",
            "module.gce-lb-https.google_compute_url_map.default",
            "module.gce-lb-https.google_compute_url_map.https_redirect",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl",
            "random_id.assets-bucket"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/forwardingRules/ml-bk-ml-mig-bkt-s-lb-https",
            "ip_address": "34.120.84.39",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "ml-bk-ml-mig-bkt-s-lb-https",
            "port_range": "443-443",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/forwardingRules/ml-bk-ml-mig-bkt-s-lb-https",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/targetHttpsProxies/ml-bk-ml-mig-bkt-s-lb-https-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.assets",
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "google_compute_url_map.ml-bkd-ml-mig-bckt-s-lb",
            "google_storage_bucket.assets",
            "module.gce-lb-https.google_compute_backend_service.default",
            "module.gce-lb-https.google_compute_global_address.default",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.gce-lb-https.google_compute_managed_ssl_certificate.default",
            "module.gce-lb-https.google_compute_ssl_certificate.default",
            "module.gce-lb-https.google_compute_target_https_proxy.default",
            "module.gce-lb-https.google_compute_url_map.default",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl",
            "random_id.assets-bucket",
            "tls_private_key.example",
            "tls_self_signed_cert.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "mtu": 0,
            "name": "ml-bk-ml-mig-bkt-s-lb",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "group1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:27:33.877-08:00",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-west1/routers/ml-bk-ml-mig-bkt-s-lb-gw-group1",
            "name": "ml-bk-ml-mig-bkt-s-lb-gw-group1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-west1/routers/ml-bk-ml-mig-bkt-s-lb-gw-group1"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "group2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:27:33.888-08:00",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-central1/routers/ml-bk-ml-mig-bkt-s-lb-gw-group2",
            "name": "ml-bk-ml-mig-bkt-s-lb-gw-group2",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-central1/routers/ml-bk-ml-mig-bkt-s-lb-gw-group2"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "group3",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:27:33.922-08:00",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-east1/routers/ml-bk-ml-mig-bkt-s-lb-gw-group3",
            "name": "ml-bk-ml-mig-bkt-s-lb-gw-group3",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-east1/routers/ml-bk-ml-mig-bkt-s-lb-gw-group3"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-group3",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-03-54dbe89f21d0/us-east1/ml-bk-ml-mig-bkt-s-lb-gw-group3/ml-bk-ml-mig-bkt-s-lb-cloud-nat-group3",
            "min_ports_per_vm": 64,
            "name": "ml-bk-ml-mig-bkt-s-lb-cloud-nat-group3",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-east1",
            "router": "ml-bk-ml-mig-bkt-s-lb-gw-group3",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group3",
            "module.cloud-nat-group3.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-group1",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-03-54dbe89f21d0/us-west1/ml-bk-ml-mig-bkt-s-lb-gw-group1/ml-bk-ml-mig-bkt-s-lb-cloud-nat-group1",
            "min_ports_per_vm": 64,
            "name": "ml-bk-ml-mig-bkt-s-lb-cloud-nat-group1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-west1",
            "router": "ml-bk-ml-mig-bkt-s-lb-gw-group1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group1",
            "module.cloud-nat-group1.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-group2",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-03-54dbe89f21d0/us-central1/ml-bk-ml-mig-bkt-s-lb-gw-group2/ml-bk-ml-mig-bkt-s-lb-cloud-nat-group2",
            "min_ports_per_vm": 64,
            "name": "ml-bk-ml-mig-bkt-s-lb-cloud-nat-group2",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-central1",
            "router": "ml-bk-ml-mig-bkt-s-lb-gw-group2",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.default",
            "google_compute_router.group2",
            "module.cloud-nat-group2.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "group1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:27:33.226-08:00",
            "gateway_address": "10.125.0.1",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-west1/subnetworks/ml-bk-ml-mig-bkt-s-lb",
            "ip_cidr_range": "10.125.0.0/20",
            "name": "ml-bk-ml-mig-bkt-s-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-west1/subnetworks/ml-bk-ml-mig-bkt-s-lb"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "group2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:27:34.062-08:00",
            "gateway_address": "10.126.0.1",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-central1/subnetworks/ml-bk-ml-mig-bkt-s-lb",
            "ip_cidr_range": "10.126.0.0/20",
            "name": "ml-bk-ml-mig-bkt-s-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-central1/subnetworks/ml-bk-ml-mig-bkt-s-lb"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "group3",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:27:35.852-08:00",
            "gateway_address": "10.127.0.1",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-east1/subnetworks/ml-bk-ml-mig-bkt-s-lb",
            "ip_cidr_range": "10.127.0.0/20",
            "name": "ml-bk-ml-mig-bkt-s-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/networks/ml-bk-ml-mig-bkt-s-lb",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/regions/us-east1/subnetworks/ml-bk-ml-mig-bkt-s-lb"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:29:13.457-08:00",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/targetHttpProxies/ml-bk-ml-mig-bkt-s-lb-http-proxy",
            "name": "ml-bk-ml-mig-bkt-s-lb-http-proxy",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "proxy_id": 1492365262971517574,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/targetHttpProxies/ml-bk-ml-mig-bkt-s-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/urlMaps/ml-bk-ml-mig-bkt-s-lb"
          },
          "dependencies": [
            "google_compute_backend_bucket.assets",
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "google_compute_url_map.ml-bkd-ml-mig-bckt-s-lb",
            "google_storage_bucket.assets",
            "module.gce-lb-https.google_compute_backend_service.default",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.gce-lb-https.google_compute_url_map.default",
            "module.gce-lb-https.google_compute_url_map.https_redirect",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl",
            "random_id.assets-bucket"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:29:12.257-08:00",
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/targetHttpsProxies/ml-bk-ml-mig-bkt-s-lb-https-proxy",
            "name": "ml-bk-ml-mig-bkt-s-lb-https-proxy",
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "proxy_id": 8424556815039904391,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/targetHttpsProxies/ml-bk-ml-mig-bkt-s-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/sslCertificates/ml-bk-ml-mig-bkt-s-lb-certificate-20210208092720558000000001"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/urlMaps/ml-bk-ml-mig-bkt-s-lb"
          },
          "dependencies": [
            "google_compute_backend_bucket.assets",
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "google_compute_url_map.ml-bkd-ml-mig-bckt-s-lb",
            "google_storage_bucket.assets",
            "module.gce-lb-https.google_compute_backend_service.default",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.gce-lb-https.google_compute_managed_ssl_certificate.default",
            "module.gce-lb-https.google_compute_ssl_certificate.default",
            "module.gce-lb-https.google_compute_url_map.default",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl",
            "random_id.assets-bucket",
            "tls_private_key.example",
            "tls_self_signed_cert.example"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gce-lb-https",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "ml-bkd-ml-mig-bckt-s-lb",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-02-08T01:29:00.372-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "eXSCsxAdMTg=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/qwiklabs-gcp-03-54dbe89f21d0/global/urlMaps/ml-bk-ml-mig-bkt-s-lb",
            "map_id": 421336256279788211,
            "name": "ml-bk-ml-mig-bkt-s-lb",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-default",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/group1",
                      "/group1/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig1",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/group2",
                      "/group2/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig2",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/group3",
                      "/group3/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendServices/ml-bk-ml-mig-bkt-s-lb-backend-mig3",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/assets",
                      "/assets/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/backendBuckets/terraform-static-content-9707",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "qwiklabs-gcp-03-54dbe89f21d0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-03-54dbe89f21d0/global/urlMaps/ml-bk-ml-mig-bkt-s-lb",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_bucket.assets",
            "google_compute_network.default",
            "google_compute_router.group1",
            "google_compute_router.group2",
            "google_compute_subnetwork.group1",
            "google_compute_subnetwork.group2",
            "google_compute_subnetwork.group3",
            "google_storage_bucket.assets",
            "module.gce-lb-https.google_compute_backend_service.default",
            "module.gce-lb-https.google_compute_health_check.default",
            "module.mig1.google_compute_health_check.http",
            "module.mig1.google_compute_health_check.tcp",
            "module.mig1.google_compute_region_instance_group_manager.mig",
            "module.mig1_template.google_compute_instance_template.tpl",
            "module.mig2.google_compute_health_check.http",
            "module.mig2.google_compute_health_check.tcp",
            "module.mig2.google_compute_region_instance_group_manager.mig",
            "module.mig2_template.google_compute_instance_template.tpl",
            "module.mig3.google_compute_health_check.http",
            "module.mig3.google_compute_health_check.tcp",
            "module.mig3.google_compute_region_instance_group_manager.mig",
            "module.mig3_template.google_compute_instance_template.tpl",
            "random_id.assets-bucket"
          ]
        }
      ]
    }
  ]
}